# simplenas

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bt.yml  docker.py  nginx.conf  rpc_compile.sh  server.yml  wait_db.sh
asset/: bt.yml
cmake/Modules/: Macro.cmake
enc_temp_folder/26b730605df042c689c182866863973/: bt_service.cpp
enc_temp_folder/8254bedd3441f7f6b0c72fba19777e34/: translate.cpp
myenv/: Dockerfile
src/bt/: CMakeLists.txt  bt.yml.example  bt_plugin.cpp  bt_plugin.hpp  bt_service.cpp  bt_service.hpp  main.cpp  rpc_compile.py  setting.cpp  setting.hpp  setting.yml  translate.cpp  translate.hpp
src/bt/prpc/: bt.grpc.pb.cc  bt.grpc.pb.h  bt.pb.cc  bt.pb.h  category.grpc.pb.cc  category.grpc.pb.h  category.pb.cc  category.pb.h  chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h  common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  danmaku.grpc.pb.cc  danmaku.grpc.pb.h  danmaku.pb.cc  danmaku.pb.h  raft.grpc.pb.cc  raft.grpc.pb.h  raft.pb.cc  raft.pb.h  user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h  video.grpc.pb.cc  video.grpc.pb.h  video.pb.cc  video.pb.h
src/bt/prpc/google/api/: annotations.grpc.pb.h  annotations.pb.cc  annotations.pb.h  http.grpc.pb.h  http.pb.cc  http.pb.h
src/frontend/: .gitignore  envoy.yaml  package-lock.json  package.json  pnpm-lock.yaml  rpc_compile.py  start_unix.sh  start_win.bat
src/frontend/public/: index.html  manifest.json  test.html
src/frontend/src/: btVideoMetadata.js  category.js  chat.css  chat.js  checklogin.js  config.js  config.json  download.js  downloadlist.js  emojiList.js  globalSidebar.js  index.js  magnetShares.js  newBtHlsTask.js  page.js  player.js  plyrwrap.js  router.js  rpcClient.js  sideManager.js  sideUtils.js  sidebar.js  signIn.js  signUp.js  store.js  test.js  uploadSubtitle.js  uploadTorrent.js  user.js  utils.js
src/frontend/src/category/: category.js  categoryitems.js  creator.js  utils.js
src/frontend/src/chat/: chat.css  chat.js
src/frontend/src/download/: btFileList.js  download.js  downloadReq.js  downloadlist.js  folderSelector.js  newBtHlsTask.js
src/proto/: bt.proto  category.proto  chat.proto  danmaku.proto  raft.proto  user.proto  video.proto
src/server/: go.mod  go.sum  main.go  rpc_compile.py  server.yml  server.yml.example  setting.yml  tables.sql
src/server/bt/: bt.go  btclient.go  file.go  helper.go  interface.go  torrent.go  tracker.go  userdata.go  usertorrents.go
src/server/category/: auth.go  category.go  category_test.go  interface.go  manager.go  service.go  type.go  types.go
src/server/crawler/: 36dm.go  acg.go  crawler.go  helper.go
src/server/db/: db.go  redis.go
src/server/log/: log.go
src/server/phttp/: cors.go  helper.go  notfound.go  secret.go
src/server/prpc/: bt.pb.go  bt.pb.gw.go  bt_grpc.pb.go  category.pb.go  chat.pb.go  chat_grpc.pb.go  common.pb.go  danmaku.pb.go  raft.pb.go  raft_grpc.pb.go  user.pb.go  user.pb.gw.go  user_grpc.pb.go  video.pb.go
src/server/ptype/: typeid.go
src/server/service/: cItemShares.go  categoryItemShares.go  chatRoomService.go  chatroomservice.go  helper.go  idpool_test.go  magnetShares.go  posterService.go  service.go  session.go  sessionid.go  share.go  videoService.go
src/server/setting/: setting.go
src/server/tools/: install.go
src/server/user/: hlsconfig.go  magnetShares.go  manager.go  user.go  usertorrents.go
src/server/utils/: atomic.go  bitset.go  callchain.go  episodeparser.go  episodeparser_test.go  file.go  helper.go  idpool.go  idpool_test.go  math.go  taskqueue.go  taskqueue_test.go
src/server/video/: hls.go  hlsconfig.go  hlsprocess.go  metadata.go  poster.go  probe.go  subtitle.go  type.go  utils.go
tls/: new.sh
(+71 files in other folders)
